--- a/basket.html
+++ b/basket.html
@@ -87,12 +87,13 @@
             </div>
 
 
-            <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px]">
-
-              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
-              <div class="flex-js-c gap-2">
-                <h4 class="text-[#CF301B] line-through">300 ₽</h4>
-                <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
+            <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px] flex-js-c flex-col">
+              <div>
+                <div class="flex-js-c gap-2">
+                  <h4 class="text-[#CF301B] line-through">300 ₽</h4>
+                  <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
+                </div>
+                <h3 class="text-[18px] text-[#212121] mb-2 ">2 100 ₽</h3>
               </div>
             </div>
 
@@ -136,14 +137,14 @@
             </div>
 
 
-            <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px]">
-              <h3 class="text-[18px] text-[#212121]">2 100 ₽</h3>
-              <div class="flex-js-c gap-2">
-                <h4 class="text-[#CF301B] line-through">300 ₽</h4>
-                <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
+             <div class="col-span-6 md:col-span-4 max-[768px]:pl-9 mt-[-5px] flex-js-c flex-col">
+              <div>
+                <div class="flex-js-c gap-2">
+                  <h4 class="text-[#CF301B] line-through">300 ₽</h4>
+                  <span class="text-white px-2 text-[13px] bg-[#16B34B] rounded-[4px]">-15%</span>
+                </div>
+                <h3 class="text-[18px] text-[#212121] mb-2 ">2 100 ₽</h3>
               </div>
-
-
             </div>
 
             <div class="col-span-6 md:col-span-2 flex-je-s">
