--- a/basket.html
+++ b/basket.html
@@ -41,13 +41,13 @@
 
     <div class="w-full grid grid-cols-12 gap-[138px] max-[1600px]:gap-[50px] max-[1400px]:flex max-[1400px]:flex-col">
       <div class="col-span-8">
-        <div class="flex-js-c gap-6 pb-5 border-b max-[767px]:flex-col max-[767px]:items-start max-[767px]:gap-[10px]">
-          <label class="def-checkbox flex-js-c order-2 sm:order-2">
+        <div class="flex-jsb-s md:flex-js-c gap-6 pb-5 border-b max-[767px]:items-start max-[767px]:gap-[10px]">
+          <label class="def-checkbox flex-js-c">
             <input type="checkbox">
             <span class="mr-2"></span>
             Выбрать все
           </label>
-          <div class="flex-je-c gap-6">
+          <div class="flex-je-s md:flex-je-c gap-1 md:gap-6 flex-col md:flex-row">
             <div class="flex-js-c gap-2 cursor-pointer text-[#212121]">
               <img src="img/icons/delete-remove.svg" alt="remove icon" class="w-6">
               Удалить
