--- a/payment-delivery.html
+++ b/payment-delivery.html
@@ -53,19 +53,19 @@
       <div class="flex gap-2 max-[767px]:overflow-x-auto " 
       style="scrollbar-width: none; -ms-overflow-style: none;">
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all border border-transparent bg-[#009FFF] text-[#fff]"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 transition-all border border-transparent bg-[#009FFF] text-[#fff]"
             data-tab="tab1"
         >
         Доставка
         </button>
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all border border-transparent bg-[#F2F2F2] hover:border-[#009FFF] hover:text-[#009FFF] text-[#000]"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 transition-all border border-transparent bg-[#F2F2F2] hover:border-[#009FFF] hover:text-[#009FFF] text-[#000]"
             data-tab="tab2"
         >
         Оплата
         </button>
         <button
-            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 text-sm transition-all border border-transparent bg-[#F2F2F2] hover:border-[#009FFF] hover:text-[#009FFF] text-[#000]"
+            class="tab-btn whitespace-nowrap rounded-full px-5 py-2 transition-all border border-transparent bg-[#F2F2F2] hover:border-[#009FFF] hover:text-[#009FFF] text-[#000]"
             data-tab="tab3"
         >
         Обмен и возврат
