--- a/catalog.html
+++ b/catalog.html
@@ -664,9 +664,7 @@
 
 
         <div class="mt-6">
-          <div
-              class="w-full grid grid-cols-1 sm:grid-cols-1 min-[800px]:grid-cols-1 min-[880px]:grid-cols-1 
-              min-[960px]:grid-cols-2 min-[1200px]:grid-cols-3 min-[1440px]:grid-cols-4 gap-6">
+          <div class="w-full grid grid-cols-2 min-[500px]:grid-cols-3 min-[767px]:grid-cols-1 min-[768px]:grid-cols-2 min-[960px]:grid-cols-3 min-[1250px]:grid-cols-4 gap-6">
             <component data-for="12" src="./components/product-card.html"></component>
           </div>
         </div>
